@@ -1,4 +1,4 @@
-.TH KILLALL 1 2007-08-09 "Linux" "User Commands"
+.TH KILLALL 1 2009-12-18 "Linux" "User Commands"
 .SH NAME
 killall \- kill processes by name
 .SH SYNOPSIS
@@ -9,6 +9,8 @@ killall \- kill processes by name
 .RB [ \-e , \-\-exact ]
 .RB [ \-g , \-\-process\-group ]
 .RB [ \-i , \-\-interactive ]
+.RB [ \-o , \-\-older\-than
+.IR TIME ]
 .RB [ \-q , \-\-quiet ]
 .RB [ \-r , \-\-regexp ]
 .RB [ \-s , \-\-signal
@@ -17,6 +19,8 @@ killall \- kill processes by name
 .IR user ]
 .RB [ \-v , \-\-verbose ]
 .RB [ \-w , \-\-wait ]
+.RB [ \-y , \-\-younger\-than
+.IR TIME ]
 .RB [ \-I , \-\-ignore-case ]
 .RB [ \-V, \-\-version ]
 .RB [ \-\- ]
@@ -65,6 +69,10 @@ group were found.
 Interactively ask for confirmation before killing.
 .IP "\fB\-l\fP, \fB\-\-list\fP"
 List all known signal names.
+.IP "\fB\-o\fP, \fB\-\-older\-than\fP"
+Match only processes that are older (started before) the time specified.
+The time is specified as a float then a unit. The units are s,m,h,d,w,M,y for
+seconds, minutes, hours, days, weeks, Months and years respectively.
 .IP "\fB\-q\fP, \fB\-\-quiet\fP"
 Do not complain if no processes were killed.
 .IP "\fB\-r\fP, \fB\-\-regexp\fP"
@@ -82,6 +90,10 @@ Wait for all killed processes to die. \fBkillall\fP checks once per second if
 any of the killed processes still exist and only returns if none are left.
 Note that \fBkillall\fP may wait forever if the signal was ignored, had no
 effect, or if the process stays in zombie state.
+.IP "\fB\-y\fP, \fB\-\-younger\-than\fP"
+Match only processes that are older (started after) the time specified.
+The time is specified as a float then a unit. The units are s,m,h,d,w,M,y for
+seconds, minutes, hours, days, weeks, Months and years respectively.
 .IP "\fB\-Z\fP, \fB\-\-context\fP"
 (SELinux Only) Specify security context: kill only processes having security 
 context that match with given expended regular expression pattern. Must precede 
