@@ -5,6 +5,11 @@ Changes in 22.9
 	* fuser only kills normal processes, patch thanks to Erik Li SF# 2892724
 	* New fuser -M if you REALLY want mount points, patch thanks to
 	  Jeremie LE HEN SF#2899709
+	* Fixed killall options for VTALRM and ILL Debian #559011
+	* pstree -a does not compact threads Debian #525632
+	* new program prtstat which prints contents of /proc/<pid>/stat 
+	  Debian #281706
+	* killall restricts by date. Thanks to George Danchev Debian #544657
 
 Changes in 22.8
 ===============
